# agentic-ai-cohort

./: .gitignore  README.md
session1/: README.md
session1/prompts/: 2.invoke-model-output.json  3.structured-invoke-model-output.json  4.structured-v2-invoke-model-output.json  5.react-prompt.md  6.react-input.json  6.tmp-model-output.json  README.md
session1/stockresearch/: .env.template  README.md  pyproject.toml
session1/stockresearch/src/stockresearch/: crew.py  llm_otel_listener.py  main.py
session2/1.stockresearch/: README.md
session2/1.stockresearch/src/stockresearch/: crew.py  crewMultiAgent.py  crewWithPlanner.py  main.py
session2/2.deepresearch/: .env.template  README.md
session2/3.stockresearch_infra/: README.md
session2/3.stockresearch_infra/src/: AgentCoreStack.py
session3/1.knowledgebase/: README.md
session3/2.employeepolicy/: .env.template  README.md
session4/1.atlassian_mcp_server/: README.md
session4/2.jira_management/: .env.template  README.md  pyproject.toml
session4/2.jira_management/src/jiramanagement/: crew.py  llm_otel_listener.py  main.py
session5/: SESSION5_ASSIGNMENTS.md
session5/1.employee_chatbot/: .env.template  .gitignore  README.md
session5/1.employee_chatbot/test/: generate_golden_dataset.py  setup_deepeval.py  test_chatbot.py  test_multi_turn.py
session6/: .env.template  .gitignore  README.md  pyproject.toml
session6/src/employee_chatbot/: agent_v1.py  agent_v2.py  agent_v3.py  main.py  tools.py
session6/test/: security_callback.py  security_test_custom.yaml
session6/test/utils/: tool_tracker.py
(+13 files in other folders)
